aded right to positon the share options more to the right added z-index to ensure the share options appear above other elements set overflow: visible on artivle to make sure it dosen't cut off the share options

--- a/styles.css
+++ b/styles.css
@@ -144,9 +144,8 @@ body {
 
 .share-options {
   position: absolute;
-  bottom: 160%;
-  left: 50%;
-  transform: translateX(-50%);
+  bottom: 165%;
+  right: -107px;
   background-color: var(--very-dark-grayish-blue);
   padding: 15px 30px;
   border-radius: 10px;
@@ -156,6 +155,7 @@ body {
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   transition: opacity 0.3s, visibility 0.3s;
   white-space: nowrap;
+  z-index: 10;
 }
 
 .share-options::after {
@@ -175,6 +175,10 @@ body {
   margin-right: 15px;
 }
 
+.article-preview {
+    overflow: visible;
+}
+
 .share-options a {
   margin: 0 7px;
 }
@@ -185,13 +189,19 @@ body {
 }
 
 .attribution {
-  font-size: 11px;
+  font-size: 15px;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 8rem;
 }
 
 .attribution a {
   color: hsl(228, 45%, 44%);
+  text-decoration: none;
+  font-weight: bolder;
+}
+
+.attribution a:hover{
+    color: hsl(214, 17%, 51%);
 }
 
 @media (max-width: 768px) {
@@ -231,7 +241,7 @@ body {
   }
 
   .article-author {
-    flex-wrap: wrap; /* Allow wrapping on small screens */
+    flex-wrap: wrap;
   }
 
   .author-info {
